[gd_scene load_steps=10 format=3 uid="uid://joo288j0m3hc"]

[ext_resource type="Script" path="res://ui/menus/tutorial_scene.gd" id="1_4s16k"]
[ext_resource type="Texture2D" uid="uid://bpf8815hj0hsr" path="res://images/tutorial/1_global_timing.svg" id="2_4k7k3"]
[ext_resource type="Texture2D" uid="uid://duao0hfoktse2" path="res://images/tutorial-popup/tutorial_menu_overlay.svg" id="3_x266r"]
[ext_resource type="FontFile" uid="uid://w2vy61sxp1ph" path="res://fonts/CascadiaCode.ttf" id="4_hxejs"]
[ext_resource type="Texture2D" uid="uid://cdtlp25mgsc28" path="res://images/tutorial-popup/previous-button.svg" id="5_rany3"]
[ext_resource type="Texture2D" uid="uid://dm5bo150taqhx" path="res://images/tutorial-popup/previous-button-select.svg" id="6_qxaqg"]
[ext_resource type="Texture2D" uid="uid://bafily2ok20ut" path="res://images/tutorial-popup/next-button.svg" id="7_lytne"]
[ext_resource type="Texture2D" uid="uid://b6oattrj5d0jm" path="res://images/tutorial-popup/next-button-select.svg" id="8_dj2d7"]
[ext_resource type="Texture2D" uid="uid://d38arjf6r8a27" path="res://images/tutorial-popup/play-icon.svg" id="9_ofqi5"]

[node name="TutorialScene" type="Node2D"]
script = ExtResource("1_4s16k")

[node name="global_timing" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GlobalTimingBackground" type="TextureRect" parent="global_timing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -3.0
offset_right = 1926.0
offset_bottom = 1086.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
texture = ExtResource("2_4k7k3")

[node name="Popup" type="TextureRect" parent="global_timing"]
layout_mode = 0
offset_left = 333.0
offset_top = 128.0
offset_right = 1546.0
offset_bottom = 921.0
texture = ExtResource("3_x266r")
metadata/_edit_use_anchors_ = true

[node name="TutorialBody" type="Label" parent="global_timing/Popup"]
layout_mode = 0
offset_left = 156.0
offset_top = 221.0
offset_right = 1128.0
offset_bottom = 612.0
theme_override_fonts/font = ExtResource("4_hxejs")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Previous" type="TextureButton" parent="global_timing/Popup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.202
anchor_top = 0.83
anchor_right = 0.202
anchor_bottom = 0.83
offset_left = -0.026001
offset_top = -0.190063
offset_right = 294.974
offset_bottom = 110.81
texture_normal = ExtResource("5_rany3")
texture_hover = ExtResource("6_qxaqg")
metadata/_edit_use_anchors_ = true

[node name="Next" type="TextureButton" parent="global_timing/Popup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.614
anchor_top = 0.83
anchor_right = 0.614
anchor_bottom = 0.83
offset_left = 0.217896
offset_top = -0.190063
offset_right = 292.218
offset_bottom = 110.81
texture_normal = ExtResource("7_lytne")
texture_hover = ExtResource("8_dj2d7")
metadata/_edit_use_anchors_ = true

[node name="HighlightIcon" type="Sprite2D" parent="."]
position = Vector2(130, 105)
rotation = 3.14159
texture = ExtResource("9_ofqi5")

[connection signal="pressed" from="global_timing/Popup/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="global_timing/Popup/Next" to="." method="_on_next_pressed"]
